--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
   },
   "homepage": "https://github.com/pyriter/calculator",
   "dependencies": {
-    "jquery": "^2.2.4"
+    "angular2": "^2.0.0-beta.17",
+    "bootstrap": "^3.3.6",
+    "core-js": "^2.4.0",
+    "es6-shim": "^0.35.1",
+    "jquery": "^2.2.4",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "browser-sync": "^2.12.10",
