--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "Angular2 calculator component",
   "main": "app.js",
   "scripts": {
-    "start": "npm run tsc && npm run webpack && npm run webpack:w",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "postinstall": "typings install",
-    "typings": "typings",
-    "webpack": "webpack",
-    "webpack:w": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --inline --progress --port 8080 --hot",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "test": "karma start",
+    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
@@ -24,22 +20,42 @@
   },
   "homepage": "https://github.com/pyriter/calculator",
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "bootstrap": "^3.3.6",
+    "@angular/common":  "2.0.0-rc.1",
+    "@angular/compiler":  "2.0.0-rc.1",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/http":  "2.0.0-rc.1",
+    "@angular/platform-browser":  "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+    "@angular/router":  "2.0.0-rc.1",
     "core-js": "^2.4.0",
-    "es6-shim": "^0.35.1",
-    "jquery": "^2.2.4",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.6",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.10",
-    "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.9.0",
+    "browser-sync": "^2.12.10",
+    "browser-sync-webpack-plugin": "^1.0.1"
   }
 }
