--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Angular2 calculator component",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080 --hot",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "start": "webpack-dev-server",
+    "build": "npm install && npm run postinstall && npm run rimraf && npm run webpack:production && node-debug server.js",
     "test": "karma start",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "webpack:production": "webpack --config config/webpack.prod.js --progress --profile --bail",
+    "rimraf": "rimraf dist",
+    "webpack-dev-server": "webpack-dev-server --inline --progress --port 8080 --hot"
   },
   "repository": {
     "type": "git",
@@ -20,14 +23,15 @@
   },
   "homepage": "https://github.com/pyriter/calculator",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.1",
-    "@angular/compiler":  "2.0.0-rc.1",
-    "@angular/core":  "2.0.0-rc.1",
-    "@angular/http":  "2.0.0-rc.1",
-    "@angular/platform-browser":  "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
-    "@angular/router":  "2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
     "core-js": "^2.4.0",
+    "express": "^4.14.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
