--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Angular2 calculator component",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "npm install && npm run postinstall && npm run rimraf && npm run webpack:production && node-debug server.js",
+    "start": "node server.js",
+    "build": "npm install && npm run postinstall && npm run rimraf && npm run webpack:production && node server.js",
     "test": "karma start",
     "postinstall": "typings install",
     "webpack:production": "webpack --config config/webpack.prod.js --progress --profile --bail",
