--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Angular2 calculator component",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "echo The npm start command is called-------------------------------",
     "build": "npm install && npm run postinstall && npm run rimraf && npm run webpack:production && node server.js",
     "test": "karma start",
     "typings": "typings",
     "postinstall": "npm run typings install",
-    "webpack:production": "webpack --config config/webpack.prod.js --progress --profile --bail",
+    "heroku-prebuild": "echo The heroku-prebuild is called ------------------",
+    "heroku-postbuild": "echo The heroku-postbuild is called ------------------",
+    "webpack-production": "webpack --config config/webpack.prod.js --progress --profile --bail",
     "rimraf": "rimraf dist",
     "webpack-dev-server": "webpack-dev-server --inline --progress --port 8080 --hot"
   },
